# rs-demo

./: .gitignore  .gitmodules  README.md  clear-notebooks.sh
.github/workflows/: run_demos.yml  test.yml
cluster-mode/: run-notebooks.sh
doc/: index.md
hybrid-mode/: .env  .gitignore  docker-compose.yml  run-notebooks.sh  start-jupyterlab.sh
hybrid-mode/resources/: jupyter-env.sh
local-mode/: .env  .gitignore  docker-compose.yml  run-notebooks.sh  test-docker-tag.sh  test-docker-tags.sh
local-mode/config/: adgs_ws_config.yaml  adgs_ws_config_token_module.yaml  cadip_search_collections.yaml  cadip_ws_config.yaml  cadip_ws_config_token_module.yaml  rs-server.yaml  staging.yaml  tempo.yaml
local-mode/docker/: Dockerfile.dask-gateway-server.local  Dockerfile.dask-gateway-server.local.sh  build.dask-gateway-server.local.sh
local-mode/scripts/: pgstac_post_actions.py  rspy-pre-actions.sh  run-notebooks-from-container.sh
notebooks/resources/: __init__.py  (+1 more)
prefect_deployment/: .env  prefect.yaml  prefect_hello_world.yaml  prefect_local.yaml  prefect_rs_client_libraries.yaml  requirements.txt  requirements_hello_world.txt  requirements_local.txt  requirements_rs_client_libraries.txt  rs_client_libraries-0.0.0-py3-none-any.whl  several_deployments.yaml
resources/: .env  .gitignore  docker-compose.yml  rspy-pre-actions.sh  scripts  stac_fastapi  testdata  tests
scripts/: clear-notebooks.sh  local-mode-test-tag.sh  run-notebooks.sh  start-jupyterlab-for-cluster-mode.sh  start-jupyterlab-for-hybrid-mode.sh
sprint1/: pyproject.toml
sprints/: parameters.ipynb
(+85 files in other folders)
