[project]
name = "rs-demo-sprint1"
version = "0.1.0"

[tool.poetry]
name = "rs-demo-sprint1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
prefect = "^2.14.9"
prefect-dask = "^0.2.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
